--- a/resources/blueprints/collections/profiles/profile.yaml
+++ b/resources/blueprints/collections/profiles/profile.yaml
@@ -35,7 +35,7 @@ tabs:
               input_type: email
               antlers: false
               type: text
-              display: 'Email'
+              display: Email
               icon: text
               listable: hidden
               instructions_position: above
@@ -53,3 +53,11 @@ tabs:
               type: slug
               localizable: true
               validate: 'max:200'
+          -
+            handle: tag
+            field:
+              type: terms
+              taxonomies:
+                - tag
+              display: Tag
+              mode: select
