--- a/resources/blueprints/assets/assets.yaml
+++ b/resources/blueprints/assets/assets.yaml
@@ -1,8 +1,26 @@
 title: Asset
-fields:
-  -
-    handle: alt
-    field:
-      display: 'Alt Text'
-      type: text
-      instructions: 'Description of the image'
+tabs:
+  main:
+    display: Main
+    sections:
+      -
+        fields:
+          -
+            handle: alt
+            field:
+              display: 'Alt Text'
+              type: text
+              instructions: 'Description of the image'
+          -
+            handle: caption
+            field:
+              input_type: text
+              antlers: false
+              type: text
+              display: Caption
+              icon: text
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
